[tool.poetry]
name = "qephon"
version = "0.1.1"
description = "A package to run QE ph.x (and potentially other phonon-related) calculations through Python."
authors = ["Anubhab Haldar <ahaldar@bu.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.0"
f90nml = "^1.4.1"
ase = "^3.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
